Adding a test function and complete the html extract.

--- a/tool/Makefile
+++ b/tool/Makefile
@@ -1,7 +1,9 @@
 # flags #
 CC	= gcc
 NMFLAGS = -g -Wall -I include/
-OTFLAGS = -I ../include/ -I ../include/inclib -I ../include/inclib/musealgo
+OTFLAGS = -I ../include/ -I ../include/inclib -I ../include/inclib/musealgo \
+		  -I../include/inclib/icmp -I../include/inclib/ping \
+		  -I../include/inclib/museipc -I../include/inclib/container
 MSFLAGS	= -I /usr/local/include/mysql -L /usr/local/lib/mysql -lmysqlclient
 PTFLAGS = -rdynamic -pthread -lz -lcrypt -lnsl -lm
 
@@ -11,6 +13,7 @@ EXRM	= bin/sprm
 EXGA	= bin/gatool
 EXFORM	= bin/format
 EXARR	= bin/arrage
+EXTEST	= bin/test
 
 # Obj
 SRCTOOL	= src/sp_tool.c ../src/flib/mconfctl/museconfctl.c ../src/flib/sp_global.c ../src/flib/sp_pfun.c \
@@ -23,16 +26,27 @@ SRCGA	= src/sp_gather.c ../src/flib/sp_global.c ../src/flib/malgo/sort_algo.c
 SRCFORM	= src/sp_format.c ../src/flib/sp_global.c ../src/flib/sp_pfun.c
 
 SRCARR	= src/sp_word_arrange.c ../src/flib/sp_pfun.c
+	
+SRCTEST = src/sp_funtest.c \
+	 	  ../src/flib/sp_global.c ../src/flib/sp_bufoper.c ../src/flib/sp_misc.c \
+		  ../src/flib/sp_pfun.c ../src/flib/sp_message.c \
+	      ../src/flib/sp_elog.c ../src/flib/sp_network.c ../src/flib/sp_html.c \
+		  ../src/flib/sp_frame.c ../src/flib/chunkmpool/mpool_web.c \
+		  ../src/flib/dboper/dboper.c ../src/flib/mconfctl/museconfctl.c \
+		  ../src/flib/museato/museato.c ../src/flib/musegc/musegc.c \
+		  ../src/flib/museipc/muse_sem.c ../src/flib/musetpool/musepthctl.c \
+		  ../src/flib/ping/ping.c ../src/flib/icmp/icmp.c
 
 # phony
-.PHONY : tool gath form rm arrange
+.PHONY : tool gath form rm arrange test
 
-all		: tool gath form rm arrange
+all		: tool gath form rm arrange test
 tool	: $(EXTOOL)
 rm		: $(EXRM)
 gath	: $(EXGA)
 form	: $(EXFORM)
 arrange : $(EXARR)
+test	: $(EXTEST)
 
 $(EXTOOL) : $(SRCTOOL)
 	$(CC) -o $(EXTOOL) $(SRCTOOL) $(OTFLAGS) $(NMFLAGS) $(MSFLAGS) $(PTFLAGS)
@@ -48,4 +62,7 @@ $(EXFORM) : $(SRCFORM)
 
 $(EXARR) : $(SRCARR)
 	$(CC) -o $(EXARR) $(SRCARR) $(OTFLAGS) $(NMFLAGS) $(MSFLAGS) $(PTFLAGS)
+
+$(EXTEST) : $(SRCTEST)
+	$(CC) -o $(EXTEST) $(SRCTEST) $(OTFLAGS) $(NMFLAGS) $(MSFLAGS) $(PTFLAGS)
 
