Data analyzer complied done.

--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -6,12 +6,14 @@ MYFLAGS = -L /usr/local/lib/mysql -lmysqlclient -I /usr/local/include/mysql -lz
 PGFLAGS = -I include/inclib/ping -I include/inclib/icmp
 
 UBUGINC = -I src/urlcatcher
+EBUGINC = -I src/dataanalyzer
 
 IPCINC	= -I include/inclib/museipc
 ALGOINC = -I include/inclib/musealgo
 
 # elf #
 EXURLB	= ../../bin/urlcatcher
+EXEXTB 	= ../../bin/dataanalyzer
 
 # obj #
 OURLB	= src/urlcatcher/sp_urlbug.c src/urlcatcher/sp_urlbug_db.c \
@@ -34,10 +36,33 @@ OURLB	= src/urlcatcher/sp_urlbug.c src/urlcatcher/sp_urlbug_db.c \
 		  src/functionlib/network/ping/ping.c src/functionlib/network/icmp/icmp.c \
 		  src/functionlib/memorypool/chunkmpool/mpool_web.c 
 
-# phony
-.PHONY : urlcatcher
+OEXTB	= src/dataanalyzer/sp_extbug.c src/dataanalyzer/sp_extbug_db.c \
+		  src/dataanalyzer/sp_extbug_error.c src/dataanalyzer/sp_extbug_global.c \
+		  src/dataanalyzer/sp_extbug_message.c src/dataanalyzer/sp_extbug_misc.c \
+		  src/dataanalyzer/sp_extbug_mmseg.c src/dataanalyzer/sp_extbug_signal.c \
+		  src/dataanalyzer/sp_extbug_termsctl.c \
+		  src/functionlib/sp_global.c \
+		  src/functionlib/container/sp_bufoper.c \
+		  src/functionlib/sp_misc.c src/functionlib/sp_pfun.c \
+		  src/functionlib/log/sp_elog.c \
+		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
+		  src/functionlib/dboper/dboper.c \
+		  src/functionlib/mconfctl/museconfctl.c \
+		  src/functionlib/memorybarrier/museato.c \
+		  src/functionlib/garbagecolloter/musegc.c \
+		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
+		  src/functionlib/threadpool/musepthctl.c \
+		  src/functionlib/memorypool/mmdpool/musemdpool.c
 
-urlcatcher:	$(EXURLB)
+# phony
+.PHONY : urlcatcher dataanalyzer
+
+urlcatcher:		$(EXURLB)
+dataanalyzer:	$(EXEXTB)
 
 $(EXURLB) : $(OURLB)
 	$(CC) -o $(EXURLB) $(OURLB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(UBUGINC) $(IPCINC) $(PGFLAGS)
+
+$(EXEXTB) : $(OEXTB)
+	$(CC) -o $(EXEXTB) $(OEXTB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(EBUGINC) $(IPCINC)
+
