--- a/config/news.cnf
+++ b/config/news.cnf
@@ -7,7 +7,7 @@
 #    urlbug not at ../bin/urlbug
 
 # pthread num ( 1 ~ 3 )
-urlbug_pthread_num      = 3
+urlbug_pthread_num      = 4
 
 # max url len ( 128 ~ 256 )
 urlbug_max_ulen         = 128
@@ -16,9 +16,11 @@ urlbug_max_ulen         = 128
 ping_packet             = 8
 ping_host               = www.baidu.com
 
+# readtimes
+per_read_times          = 180
+
 # file locate
 urlbug_sem_key_file     = ../bin/urlcatcher
-default_tmpfile_locate  = ../text/url.tmp
 
 # error log
 urlbug_err_log          = ../log/news_urlerr.log
