support muti config data reading now
By adding a interface.

--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -15,7 +15,7 @@ ALGOINC = -I include/inclib/musealgo
 # elf #
 EXURLB	= ../../bin/urlcatcher
 EXEXTB 	= ../../bin/dataanalyzer
-EXTEST  = ../../bin/test
+EXTEST  = ../../bin/tester
 
 # obj #
 OURLB	= src/urlcatcher/sp_urlbug.c src/urlcatcher/sp_urlbug_db.c \
@@ -29,7 +29,7 @@ OURLB	= src/urlcatcher/sp_urlbug.c src/urlcatcher/sp_urlbug_db.c \
 		  src/functionlib/log/sp_elog.c \
 		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/mconfctl/museconfctl.c \
+		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/memorybarrier/museato.c \
 		  src/functionlib/garbagecolloter/musegc.c \
 		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
@@ -49,14 +49,14 @@ OEXTB	= src/dataanalyzer/sp_extbug.c src/dataanalyzer/sp_extbug_db.c \
 		  src/functionlib/log/sp_elog.c \
 		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/mconfctl/museconfctl.c \
+		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/memorybarrier/museato.c \
 		  src/functionlib/garbagecolloter/musegc.c \
 		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/memorypool/mmdpool/musemdpool.c
 
-OTEST   = src/test/sp_funtest.c \
+OTEST   = src/tester/tester.c \
 	 	  src/functionlib/sp_global.c \
 	      src/functionlib/container/sp_bufoper.c \
 		  src/functionlib/sp_misc.c \
@@ -68,7 +68,7 @@ OTEST   = src/test/sp_funtest.c \
 		  src/functionlib/sp_frame.c \
 		  src/functionlib/memorypool/chunkmpool/mpool_web.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/mconfctl/museconfctl.c \
+		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/memorybarrier/museato.c \
 		  src/functionlib/garbagecolloter/musegc.c \
 		  src/functionlib/ipc/muse_sem.c \
