--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -30,7 +30,7 @@ OURLB	= src/urlcatcher/urlcatcher.c src/urlcatcher/databasectl.c \
 		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
 		  src/functionlib/dboper/dboper.c \
 		  src/functionlib/confparser/museconfparser.c \
-		  src/functionlib/garbagecolloter/musegc.c \
+		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/network/sp_network.c \
@@ -49,7 +49,7 @@ OEXTB	= src/dataanalyzer/dataanalyzer.c src/dataanalyzer/database.c \
 		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
 		  src/functionlib/dboper/dboper.c \
 		  src/functionlib/confparser/museconfparser.c \
-		  src/functionlib/garbagecolloter/musegc.c \
+		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/memorypool/mmdpool/musemdpool.c
@@ -67,7 +67,7 @@ OTEST   = src/tester/tester.c \
 		  src/functionlib/memorypool/chunkmpool/mpool_web.c \
 		  src/functionlib/dboper/dboper.c \
 		  src/functionlib/confparser/museconfparser.c \
-		  src/functionlib/garbagecolloter/musegc.c \
+		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/network/ping/ping.c \
