Clean old code ready for a new reborn

--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -1,16 +1,12 @@
 # flags #
 CC		= gcc
-STD99	= -std=c99
-NMFLAGS	= -rdynamic -g -Wall -I include/inclib -I include/inclib/mmdpool -I include/ -fstack-protector-all
+STD  	= -std=c99
+NMFLAGS	= -rdynamic -g -Wall -I include/libinc/ -I include/ -fstack-protector-all
 PTFLAGS	= -pthread -lcrypt -lnsl -lm -lc 
 MYFLAGS = -L/usr/local/lib/mysql -lmysqlclient -I /usr/local/include/mysql -lz
-PGFLAGS = -I include/inclib/ping -I include/inclib/icmp
 
 UBUGINC = -I src/urlcatcher
 EBUGINC = -I src/dataanalyzer
-
-IPCINC	= -I include/inclib/museipc
-ALGOINC = -I include/inclib/musealgo
 
 # elf #
 EXURLB	= ../../bin/urlcatcher
@@ -20,9 +16,8 @@ EXTEST  = ../../bin/tester
 # obj #
 OURLB	= src/urlcatcher/urlcatcher.c src/urlcatcher/databasectl.c \
 		  src/urlcatcher/misc.c src/urlcatcher/signal.c \
-		  src/urlcatcher/uglobal.c src/urlcatcher/message.c \
-		  src/urlcatcher/error.c src/urlcatcher/network.c \
-		  src/urlcatcher/rule.c \
+		  src/urlcatcher/uglobal.c src/urlcatcher/error.c \
+	      src/urlcatcher/network.c src/urlcatcher/rule.c \
 		  src/functionlib/sp_global.c \
 		  src/functionlib/container/sp_bufoper.c \
 		  src/functionlib/sp_misc.c src/functionlib/sp_pfun.c \
@@ -31,15 +26,16 @@ OURLB	= src/urlcatcher/urlcatcher.c src/urlcatcher/databasectl.c \
 		  src/functionlib/dboper/dboper.c \
 		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/objgc.c \
-		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
+		  src/functionlib/ipc/muse_sem.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/network/sp_network.c \
-		  src/functionlib/network/ping/ping.c src/functionlib/network/icmp/icmp.c \
+		  src/functionlib/network/ping/ping.c \
+		  src/functionlib/network/icmp/icmp.c \
 		  src/functionlib/memorypool/chunkmpool/mpool_web.c 
 
 OEXTB	= src/dataanalyzer/dataanalyzer.c src/dataanalyzer/database.c \
 		  src/dataanalyzer/error.c src/dataanalyzer/global.c \
-		  src/dataanalyzer/message.c src/dataanalyzer/misc.c \
+		  src/dataanalyzer/misc.c \
 		  src/dataanalyzer/mmseg.c src/dataanalyzer/signal.c \
 		  src/dataanalyzer/termsctl.c \
 		  src/functionlib/sp_global.c \
@@ -50,7 +46,7 @@ OEXTB	= src/dataanalyzer/dataanalyzer.c src/dataanalyzer/database.c \
 		  src/functionlib/dboper/dboper.c \
 		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/objgc.c \
-		  src/functionlib/ipc/muse_sem.c src/functionlib/ipc/sp_message.c \
+		  src/functionlib/ipc/muse_sem.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/memorypool/mmdpool/musemdpool.c
 
@@ -83,11 +79,12 @@ dataanalyzer:	$(EXEXTB)
 tester:			$(EXTEST)
 
 $(EXURLB) : $(OURLB)
-	$(CC) -o $(EXURLB) $(OURLB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(UBUGINC) $(IPCINC) $(PGFLAGS) $(STD99)
+	$(CC) -o $(EXURLB) $(OURLB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(UBUGINC) $(STD)
 
 $(EXEXTB) : $(OEXTB)
-	$(CC) -o $(EXEXTB) $(OEXTB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(EBUGINC) $(IPCINC) $(STD99)
+	$(CC) -o $(EXEXTB) $(OEXTB) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(EBUGINC) $(STD)
 
 $(EXTEST) : $(OTEST)
-	$(CC) -o $(EXTEST) $(OTEST) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(IPCINC) $(UBUGINC) $(PGFLAGS) $(STD99)
+	$(CC) -o $(EXTEST) $(OTEST) $(NMFLAGS) $(PTFLAGS) $(MYFLAGS) $(UBUGINC) $(STD)
+
 
