Log message modify

--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -27,6 +27,8 @@ OURLB	= src/urlcatcher/urlcatcher.c src/urlcatcher/databasectl.c \
 		  src/functionlib/confparser/museconfparser.c \
 		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c \
+		  src/functionlib/log/log.c \
+		  src/functionlib/log/logmsgdef.c src/functionlib/log/logmsg.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/network/sp_network.c \
 		  src/functionlib/network/ping/ping.c \
