Modify syslog conf

--- a/sysylogconf.d/dataanalyzer.conf
+++ b/sysylogconf.d/dataanalyzer.conf
@@ -1,4 +1,4 @@
-# muse log configuration file.
+# dataanalyzer log configuration file.
 
 options {
     flush_lines (0);
@@ -11,14 +11,14 @@ options {
 };
 
 
-template t_muse {
+template t_dataanalyzer {
     template("${S_DATE} dataanalyzer ${PROGRAM}[${PID}]: [${LEVEL}] ${MSG}\n"); template_escape(no);
 };
 
 
-destination d_muse { file("/var/log/dataanalyzer" template(t_muse)); };
+destination d_dataanalyzer { file("/var/log/dataanalyzer" template(t_dataanalyzer)); };
 
-filter f_muse   { facility(local3); };
+filter f_dataanalyzer   { facility(local3); };
 
-log { source(s_sys); filter(f_muse); destination(d_muse); };
+log { source(s_sys); filter(f_dataanalyzer); destination(d_dataanalyzer); };
 
