--- a/sysylogconf.d/urlcatcher.conf
+++ b/sysylogconf.d/urlcatcher.conf
@@ -1,4 +1,4 @@
-# muse log configuration file.
+# urlcatcher log configuration file.
 
 options {
     flush_lines (0);
@@ -11,14 +11,14 @@ options {
 };
 
 
-template t_muse {
+template t_urlcatcher {
     template("${S_DATE} urlcatcher ${PROGRAM}[${PID}]: [${LEVEL}] ${MSG}\n"); template_escape(no);
 };
 
 
-destination d_muse { file("/var/log/urlcatcher" template(t_muse)); };
+destination d_urlcatcher { file("/var/log/urlcatcher" template(t_urlcatcher)); };
 
-filter f_muse   { facility(local2); };
+filter f_urlcatcher   { facility(local2); };
 
-log { source(s_sys); filter(f_muse); destination(d_muse); };
+log { source(s_sys); filter(f_urlcatcher); destination(d_urlcatcher); };
 
