Modifying dataanalyzer and make it compile already

--- a/sourcecode/c/Makefile
+++ b/sourcecode/c/Makefile
@@ -21,10 +21,9 @@ OURLB	= src/urlcatcher/urlcatcher.c src/urlcatcher/databasectl.c \
 		  src/functionlib/sp_global.c \
 		  src/functionlib/container/sp_bufoper.c \
 		  src/functionlib/sp_misc.c src/functionlib/sp_pfun.c \
-		  src/functionlib/log/sp_elog.c \
-		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
+		  src/functionlib/sp_html.c src/functionlib/frame.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/confparser/museconfparser.c \
+		  src/functionlib/confparser.c \
 		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c \
 		  src/functionlib/log/log.c \
@@ -43,11 +42,12 @@ OEXTB	= src/dataanalyzer/dataanalyzer.c src/dataanalyzer/database.c \
 		  src/functionlib/sp_global.c \
 		  src/functionlib/container/sp_bufoper.c \
 		  src/functionlib/sp_misc.c src/functionlib/sp_pfun.c \
-		  src/functionlib/log/sp_elog.c \
-		  src/functionlib/sp_html.c src/functionlib/sp_frame.c \
+		  src/functionlib/frame.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/confparser/museconfparser.c \
+		  src/functionlib/confparser.c \
 		  src/functionlib/objgc.c \
+		  src/functionlib/log/log.c \
+		  src/functionlib/log/logmsgdef.c src/functionlib/log/logmsg.c \
 		  src/functionlib/ipc/muse_sem.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/memorypool/mmdpool/musemdpool.c
@@ -57,16 +57,15 @@ OTEST   = src/tester/tester.c \
 	      src/functionlib/container/sp_bufoper.c \
 		  src/functionlib/sp_misc.c \
 		  src/functionlib/sp_pfun.c \
-		  src/functionlib/ipc/sp_message.c \
-		  src/functionlib/log/sp_elog.c \
 		  src/functionlib/network/sp_network.c \
-		  src/functionlib/sp_html.c \
-		  src/functionlib/sp_frame.c \
+		  src/functionlib/frame.c \
 		  src/functionlib/memorypool/chunkmpool/mpool_web.c \
 		  src/functionlib/dboper/dboper.c \
-		  src/functionlib/confparser/museconfparser.c \
+		  src/functionlib/confparser.c \
 		  src/functionlib/objgc.c \
 		  src/functionlib/ipc/muse_sem.c \
+		  src/functionlib/log/log.c \
+		  src/functionlib/log/logmsgdef.c src/functionlib/log/logmsg.c \
 		  src/functionlib/threadpool/musepthctl.c \
 		  src/functionlib/network/ping/ping.c \
 		  src/functionlib/network/icmp/icmp.c \
